--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "prepublishOnly": "npm run test && npm run lint"
   },
   "devDependencies": {
-    "mocha": "^5.2.0",
-    "sinon": "^6.0.0",
     "chai": "^4.1.2",
-    "eslint": "^4.19.1",
+    "coveralls": "^3.0.1",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.12.0",
     "istanbul": "^0.4.5",
-    "nyc": "^12.0.2",
-    "coveralls": "^3.0.1",
-    "mocha-lcov-reporter": "^1.3.0"
+    "mocha": "^5.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
+    "nyc": "^13.3.0",
+    "sinon": "^6.0.0"
   },
   "repository": {
     "type": "git",
